ChangeLog for package koRpus.lang.it

changes in version 0.1-2 (2018-02-20)
unreleased:
  - this release is under development
changed:
  - updated README.md
added:
  - support optional arguments for koRpus::set.lang.support()

changes in version 0.1-1 (2018-01-05)
changed:
  - initial release as standalone package
