@@ -3,6 +3,8 @@ ChangeLog for package koRpus.lang.it
 changes in version 0.1-2 (2018-02-20)
 unreleased:
   - this release is under development
+fixed:
+  - package name in license header
 changed:
   - updated README.md
 added:
